--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "@strapi/plugin-cloud": "5.24.1",
     "@strapi/plugin-users-permissions": "5.24.1",
-    "@strapi/provider-database-postgresql": "^5.24.1"
+    "@strapi/provider-database-postgresql": "^5.24.1",
     "@strapi/strapi": "5.24.1",
     "better-sqlite3": "11.3.0",
     "pg": "^8.16.3",
